--- a/views/include/_add-staffs-form.ejs
+++ b/views/include/_add-staffs-form.ejs
@@ -104,6 +104,17 @@
         />
       </div>
 
+      <div>
+        <label for="status" class="formbold-form-label"> Status: </label>
+        <div>
+          <select id="status" class="formbold-form-input" name="status">
+          <option value="" disabled selected hidden>Select Status</option>
+            <option value="active">Active</option>
+            <option value="inactive">Inactive</option>
+        </select>
+        </div>
+      </div>
+
       <input
         type="hidden"
         name="createdBy"
