--- a/views/include/_all-application.ejs
+++ b/views/include/_all-application.ejs
@@ -104,7 +104,7 @@
                 <td class="hover"><%= apply.createdBy %></td>
                 <td class="hover"><%= apply.username %></td>
                 <td class="hover"><%= apply.phone %></td>
-                <td class="hover role-green-bg"><%= 'AID' + apply.applyAid %></td>
+                <td class="hover role-green-bg"><%= apply.applyAid %></td>
                 <td class="hover role-green-bg"><%= apply.location %></td>
                 <td class="hover"><%= apply.address %></td>
                 <td class="hover"><%= apply.staffInCharge %></td>
